Adding updated website script

--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Emily Home</title>
+<title>Thinking About UUU</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style/style.css">
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="script.js"></script>
 <style>
     h1,
     h2,
@@ -53,6 +54,7 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
 
     <!-- First Grid -->
     <div class="w3-row-padding   w3-padding-64 w3-container">
+        <button type=button onclick="randomizeWords()">Click me</button> 
         <div class="w3-content">
 
             <h1 class="text-myDarkBlue w3-center">I am:</h1>
