--- a/website/aboutus.html
+++ b/website/aboutus.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Emily Home</title>
+<title>Thinking About UUU</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style/style.css">
