--- a/website/index.html
+++ b/website/index.html
@@ -54,7 +54,7 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
 
     <!-- First Grid -->
     <div class="w3-row-padding   w3-padding-64 w3-container">
-        <button type=button onclick="randomizeWords()">Click me</button> 
+<!--        <button type=button >Click me</button> -->
         <div class="w3-content">
 
             <h1 class="text-myDarkBlue w3-center">I am:</h1>
@@ -62,20 +62,20 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
             <h5 class="w3-padding-32 text-myDarkBlue w3-center">
 
                 <table style="width:100%; padding:px">
-                    <tr style="padding:2px">
-                        <td>Kind</td>
-                        <td>Thoughtful</td>
-                        <td>Gentle</td>
+                    <tr >
+                        <td id="0">Kind</td>
+                        <td id="1">Thoughtful</td>
+                        <td id="2">Gentle</td>
                     </tr>
                     <tr>
-                        <td>Amusing</td>
-                        <td class="myDarkBlue w3-text-white">Creative</td>
-                        <td>Helpful</td>
+                        <td id="3">Amusing</td>
+                        <td id="4" class="myDarkBlue w3-text-white">Creative</td>
+                        <td id="5">Helpful</td>
                     </tr>
                     <tr>
-                        <td>Loyal</td>
-                        <td>Compassionate</td>
-                        <td>Funny</td>
+                        <td id="6">Loyal</td>
+                        <td id="7">Compassionate</td>
+                        <td id="8">Funny</td>
                     </tr>
                 </table>
 
@@ -84,10 +84,10 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
         </div>
     </div>
     <!-- Second Grid -->
-    <div class="w3-row-padding   w3-padding-32 w3-container ">
+    <div class="w3-row-padding  w3-padding-32 w3-container ">
         <div class="w3-content w3-center text-myDarkBlue">
 
-            <h2>Randomize Words</h2>
+            <h2 onclick="randomizeWords()">Randomize Words</h2>
             <h2>Save Center Word</h2>
 
         </div>
