More website updates

--- a/website/index.html
+++ b/website/index.html
@@ -63,19 +63,19 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
 
                 <table style="width:100%; padding:px">
                     <tr >
-                        <td id="0">Kind</td>
-                        <td id="1">Thoughtful</td>
-                        <td id="2">Gentle</td>
+                        <td id="0" onclick="clicked(id)">Kind</td>
+                        <td id="1" onclick="clicked(id)">Thoughtful</td>
+                        <td id="2" onclick="clicked(id)">Gentle</td>
                     </tr>
                     <tr>
-                        <td id="3">Amusing</td>
+                        <td id="3" onclick="clicked(id)">Amusing</td>
                         <td id="4" class="myDarkBlue w3-text-white">Creative</td>
-                        <td id="5">Helpful</td>
+                        <td id="5" onclick="clicked(id)">Helpful</td>
                     </tr>
                     <tr>
-                        <td id="6">Loyal</td>
-                        <td id="7">Compassionate</td>
-                        <td id="8">Funny</td>
+                        <td id="6" onclick="clicked(id)">Loyal</td>
+                        <td id="7" onclick="clicked(id)">Compassionate</td>
+                        <td id="8" onclick="clicked(id)">Funny</td>
                     </tr>
                 </table>
 
