can delete elements from saved words

--- a/website/index.html
+++ b/website/index.html
@@ -98,9 +98,10 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
 
             <h2>Saved Words</h2>
             <h5 id="savedWords"> </h5>
+            
 <!--
-            <h5>Amicable</h5>
-            <h5>Hardworking</h5>
+            <h5 id="savedWord0" onclick="funct()">Amicable</h5>
+            <h5 id="savedWord1"> Hardworking</h5>
 -->
 
         </div>
