--- a/website/index.html
+++ b/website/index.html
@@ -46,9 +46,11 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
 -->
 
     <!-- Header -->
-    <header class="w3-container w3-center ">
+    <header class="w3-container w3-center w3-padding-64  ">
 
-        <h1 class="w3-margin w3-jumbo"><img class="scale70" src="image/logo.jpeg" alt="Thinking About UUU"></h1>
+        <h1 class="w3-margin w3-jumbo"><img class="scale70" src="image/reflection.jpeg" alt="Reflection"></h1>
+<!--        <h1 class="w3-margin w3-jumbo">  <br> </h1>-->
+        
         <!--  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>-->
     </header>
 
@@ -57,7 +59,7 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
 <!--        <button type=button >Click me</button> -->
         <div class="w3-content">
 
-            <h1 class="text-myDarkBlue w3-center">I am:</h1>
+            <h1 class="text-myDarkBlue w3-center">I am...</h1>
 
             <h5 class="w3-padding-32 text-myDarkBlue w3-center">
 
