--- a/website/aboutus.html
+++ b/website/aboutus.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Thinking About UUU</title>
+<title>About Us</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style/style.css">
@@ -26,40 +26,33 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
 -->
    
 <!-- Header -->
-<header class="w3-container w3-center myLightBlue" >
+<header class="w3-container w3-center" >
    
-  <h1 class="w3-margin w3-jumbo"><img class="scale70" src="image/logo.jpeg" alt="Thinking About UUU"></h1>
-    <p class="w3-xlarge">About The Team</p>
+  <h1 class="w3-margin w3-jumbo"><img class="scale25 " src="image/reflection.jpeg" alt="reflection"></h1>
+    <p class="w3-xlarge text-myDarkBlue">About The Team</p>
 <!--  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>-->
 </header>
 
 <!-- First Grid -->
-<div class="w3-row-padding  myLightBlue w3-padding-64 w3-container">
+<div class="w3-row-padding   w3-padding-64 w3-container text-myDarkBlue">
   <div class="w3-content">
-    <div class="w3-quarter w3-center">
-      <img class="scale15 w3-padding-32 circleImage" src="image/headshot.jpeg" alt="Emily Kobayashi">
+    <div class="w3-third w3-center">
+      <img class="scale15 w3-padding-32 circleImage" src="image/headshot_cropped.jpg" alt="Emily Kobayashi">
         <br>Emily Kobayashi
         <br>2nd Year Graduate Student 
         <br>Bioinformatics and Systems Biology
         <br>UCSD
     </div>
-    <div class="w3-quarter  w3-center">
-      <img class="scale15 w3-padding-32 circleImage" src="image/headshot.jpeg" alt="Allan Mac">
-        <br>Allan Mac
-        <br>4th Year Undergraduate Student 
-        <br>Computer Science
-        <br>UCSD
-    </div>
-      <div class="w3-quarter  w3-center">
-      <img class="scale15 w3-padding-32 circleImage" src="image/headshot.jpeg" alt="Tony Lin">
+      <div class="w3-third  w3-center">
+      <img class="scale15 w3-padding-32 circleImage" src="image/Tony.jpg" alt="Tony Lin">
         <br>Tony Lin
         <br>3rd Year Transfer Student 
         <br>Computer Engineering
         <br>UCSD
     </div>
-      <div class="w3-quarter w3-center">
-      <img class="scale15 w3-padding-32 circleImage" src="image/headshot.jpeg" alt="Nitya">
-        <br>Nitya
+      <div class="w3-third w3-center">
+      <img class="scale15 w3-padding-32 circleImage" src="image/nitya_cropped.jpg" alt="Nitya">
+        <br>Nitya Agarwal
         <br>1st Year Undergraduate Student 
         <br>Computer Engineering
         <br>UCSD
@@ -69,7 +62,7 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
 
 <!-- Second Grid -->
 <div class="w3-row-padding w3-white w3-padding-64 w3-container">
-  <div class="w3-content">
+  <div class="w3-content w3-center text-myDarkBlue">
 <!--
     <div class="w3-third w3-center">
       <img class="scale20 w3-padding-64 " src="image/flower.png" alt="flower">
@@ -84,27 +77,21 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
       <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
         laboris nisi ut aliquip ex ea commodo consequat.</p>
--->
+--> <h2>Reflection was created on February 19-21 2021 as part of SD Hacks</h2>
     </div>
   </div>
 </div>
 
 <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
 <!--    <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1>-->
+    
 </div>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
   <div class="w3-xlarge w3-padding-32">
-<!--    
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
--->
-     <a href="https://github.com/emikoifish"><i class="fa fa-github w3-hover-opacity"></i></a>
-     <a href="https://www.linkedin.com/in/emilykobayashi/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+
+      <a href="index.html">Refection Main Page</a>
     
  </div>
 <!-- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>-->
