--- a/website/index.html
+++ b/website/index.html
@@ -49,7 +49,7 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
     <!-- Header -->
     <header class="w3-container w3-center w3-padding-64  ">
 
-        <h1 class="w3-margin w3-jumbo"><img class="scale70" src="image/reflection.jpeg" alt="Reflection"></h1>
+        <h1 class="w3-margin w3-jumbo"><img class="scale25" src="image/reflection.jpeg" alt="Reflection"></h1>
 <!--        <h1 class="w3-margin w3-jumbo">  <br> </h1>-->
         
         <!--  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>-->
@@ -106,7 +106,7 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
             <h5 id="savedWord0" onclick="funct()">Amicable</h5>
             <h5 id="savedWord1"> Hardworking</h5>
 -->
-
+            <h2 id="prompt"> </h2>
         </div>
     </div>
     <!--
