--- a/website/aboutus.html
+++ b/website/aboutus.html
@@ -77,7 +77,7 @@ website hosting information: https://ucsdservicedesk.service-now.com/its?id=kb_a
       <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
         laboris nisi ut aliquip ex ea commodo consequat.</p>
---> <h2>Reflection was created on February 19-21 2021 as part of SD Hacks</h2>
+--> <h2>Reflection was created on February 19-21 2021 as part of SD Hacks 2021</h2>
     </div>
   </div>
 </div>
